--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ pyarrow     # for parquet
 fastparquet # optional parquet backend
 psutil      # system stats (if you show progress/ETA)
 tqdm        # clean progress bars
+unidecode
